# gametaskai

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.yaml
electron/: electron-builder.json  gulpfile.js  package-lock.json  package.json
electron/app/: main.js
electron/app/public/: index.html  index.js
electron/app/src/: App.css  App.js  app.icns
electron/app/src/components/: AppComp.js
electron/app/src/components/chat/: Chat.js
electron/app/src/components/ide/: Ide.js
electron/app/src/components/qBox/: QBox.js
electron/app/src/components/qBox/render/: Render.js  RenderStyle.js
electron/app/src/service/renderer/: renderer.js
resources/public/: gametaskui
src/: data.rs  main.rs  services.rs
src/data/: quarks.rs
src/data/qchar/: person.rs  qChar.rs
src/data/qchar/person/dob/: dateOfBirth.rs
src/data/qtimeline/: time.rs
src/data/qtimeline/time/: timeline.rs  timestamp.rs
src/data/quarks/: qdummy.rs  qobject.rs
src/data/quarks/qdummy/: dum.rs
src/data/quarks/qobject/: qcube.rs
src/data/quarks/qtimeline/time/: timeline.rs
src/services/: electron.rs  gametask.rs  utils.rs
src/services/electron/: electron_app.rs  run.rs  run_dev.rs  run_prod.rs  runner.rs  temp.rs
src/services/electron/electron_app/: e_app.rs  e_app_service.rs
src/services/gametask/: cruds_ops.rs  engine.rs  master.rs
src/services/gametask/cruds_ops/: cruds.rs
src/services/gametask/engine/: exit.rs  maineng.rs
src/services/gametask/route/: basic.rs
src/services/utils/: config.rs  configloader.rs  helpers.rs
(+4 files in other folders)
