[package]
name = "game_task_ai"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
include_dir = "0.7.3"
tempfile = "3.2"
tinyfiledialogs = "3.0"
tokio = { version = "1", features = ["full"]}
warp = "0.3"

[build-dependencies]
copy_dir = "0.1.2"
fs_extra = "1.3.0"